# SpaceOrb

./: README.md  SPACEORB_CORE_SPEC.txt  package-lock.json
mission-ai/: main.py  requirements.txt  sandbox.service
mission-control/: next.config.js  package.json  tailwind.config.ts
mission-control/app/: globals.css  layout.tsx  page.tsx
mission-control/app/api/ingest/: route.ts
mission-control/app/api/ws/: route.ts
mission-core/: Cargo.toml
mission-core/src/: dtn.rs  main.rs  orbit.rs  priority.rs  vault.rs
scripts/: mission-ai.service  setup_pi5.sh
