[package]
name = "mission-core"
version = "7.6.0"
edition = "2021"
description = "SpaceOrb V7.6 Autonomous Orbital Edge Daemon — Root Supervisor"
authors = ["SpaceOrb Team"]

[[bin]]
name = "mission-core"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Compression
zstd = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment & config
dotenvy = "0.15"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unix filesystem ops
nix = { version = "0.29", features = ["fs", "socket", "user"] }

# Orbital mechanics
sgp4 = "0.4"

# DTN networking
zenoh = { version = "1.1", features = ["transport_quic"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
